HMS-2696 fix: align default page with mock-ups
Update the default content page to be aligned with the current state of
the mocks-ups.

--- a/src/Routes/DefaultPage/DefaultPage.scss
+++ b/src/Routes/DefaultPage/DefaultPage.scss
@@ -1,5 +1,1 @@
 @import '~@redhat-cloud-services/frontend-components-utilities/styles/variables';
-
-.empty-state-body-content {
-  margin-bottom: $ins-margin;
-}
